force-app/main/default/objects/Poduct_Services_LOG__c/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>mensaje de excepciones</description>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>