force-app/main/default/objects/Poduct_Services_LOG__c/fields/Fecha_Peticion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Peticion__c</fullName>
    <description>Fecha en que se recibe la peticion</description>
    <label>Fecha Peticion</label>
    <type>DateTime</type>
</CustomField>