force-app/main/default/objects/Poduct_Services_LOG__c/fields/Remote_Address__c.field-meta.xml
<CustomField>
    <fullName>Remote_Address__c</fullName>
    <description>Remote IP Address</description>
    <label>Remote Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>