force-app/main/default/objects/Poduct_Services_LOG__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>150</length>
    <type>Text</type>
</CustomField>