force-app/main/default/objects/Poduct_Services_LOG__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <description>URL Mapping</description>
    <label>URI</label>
    <length>250</length>
    <type>Text</type>
</CustomField>