force-app/main/default/objects/Poduct_Services_LOG__c/fields/URL_Params__c.field-meta.xml
<CustomField>
    <fullName>URL_Params__c</fullName>
    <description>Nombre y valor de los parametros</description>
    <label>URL Params</label>
    <length>150</length>
    <type>Text</type>
</CustomField>